# code-interpreter-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
notebook/: assistant-opendata-bridge.ipynb  assistants_function_calling_with_bing_search.ipynb
src/: main.py
src/config/: azure_open_ai_settings.py  timezone.py
src/model/: user.py
src/repository/: azure_open_ai_client.py  user_repository.py
src/routers/: download.py  opendata_bridge_chat.py  opendata_bridge_runner.py  shutdown.py
src/service/: chat_assistant.py  run_code.py
